--- a/site/wp-content/plugins/all-in-one-seo-pack-pro/aioseop_module.css
+++ b/site/wp-content/plugins/all-in-one-seo-pack-pro/aioseop_module.css
@@ -858,11 +858,18 @@ table.aioseop_table td, table.aioseop_table th {
 .aioseop_option_docs h3 {
 	background:none;
 }
+div.aioseop_notice {
+	position: relative;
+}
+div.aioseop_notice a.aioseop_dismiss_link {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+}
 .aioseop_error_notice {
 	color: #f00;
 	font-weight: bold;
 }
-
 .aioseop_input select {
 	margin: 7px 0px;
 }
